@@ -75,6 +75,10 @@
         </tr>
       </table>
     </div>
+
+    <div metal:use-macro="calendar.navigation.macros['footer']"/>
+
   </div>
+
 
 </div>
