@@ -63,6 +63,9 @@
       
     </table>
 
+    <div metal:use-macro="calendar.navigation.macros['footer']"/>
+
   </div>
+
 
 </div>
