@@ -26,13 +26,11 @@
             <a href="${calendar.add_event_url}"><img src="${api.static_url}/images/cal_buttons_event.png" /></a>    
           </div>
        
-          <!-- actions -->
+          <!-- actions 
           <div class="cal_actions">
-             <!-- download (Not Implemented)
              <a class="cal_download" href="#">Download</a>
-             -->
-             <a class="cal_subscribe" href="${calendar.feed_href}">Subscribe</a>
           </div>
+          -->
         </div>
 
         <!-- buttons -->
@@ -46,6 +44,12 @@
             <a href="${calendar.navigation.day_button_href}"><img src="${api.static_url}/images/cal_buttons_${calendar.navigation.day_button_img}" /></a><a href="${calendar.navigation.week_button_href}"><img src="${api.static_url}/images/cal_buttons_${calendar.navigation.week_button_img}" /></a><a href="${calendar.navigation.month_button_href}"><img src="${api.static_url}/images/cal_buttons_${calendar.navigation.month_button_img}" /></a><a href="${calendar.navigation.list_button_href}"><img src="${api.static_url}/images/cal_buttons_${calendar.navigation.list_button_img}" /></a>
           </div>
         </div>
+      </div>
+
+      <div class="cal_footer clearafter" metal:define-macro="footer">
+        <a href="${calendar.feed_href}">
+          <img src="${api.static_url}/images/feed-icon-16x16.png" alt="Subscribe" />
+        </a>      
       </div>
 
 </div>
